ion list estilos.

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -7,6 +7,9 @@
 </ion-header>
 
 <ion-content [fullscreen]="true" color="dark">
+
+  <app-pendientes></app-pendientes>
+
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button (click)= "agregarPendiente()">
       <ion-icon name="add"></ion-icon>
